modulos de noticias para los turistas
